# win-access

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg.json
.github/workflows/: build.yml
cmake/: toolchain-windows-xwin.cmake
profiles/: default.json
scripts/: check-windows-headers.sh  generate_icon.py  generate_sounds.py
src/: main.cpp  resources.rc
src/core/: Controller.cpp  Controller.h  HotkeyService.cpp  HotkeyService.h  MouseHook.cpp  MouseHook.h  ProfileManager.cpp  ProfileManager.h
src/magnifier/: FocusTracker.cpp  FocusTracker.h  LensRenderer.cpp  LensRenderer.h  MagnifierController.cpp  MagnifierController.h
src/overlay/: CaptureManager.cpp  CaptureManager.h  OverlayWindow.cpp  OverlayWindow.h  ShaderPipeline.cpp  ShaderPipeline.h
src/overlay/shaders/: contrast.hlsl  edge_enhance.hlsl  fullscreen_vs.hlsl  invert.hlsl  lens.hlsl  passthrough.hlsl
src/reader/: AccessibilityReader.cpp  AccessibilityReader.h  OcrReader.cpp  OcrReader.h  SpeechEngine.cpp  SpeechEngine.h
src/ui/: SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h
src/util/: AudioFeedback.cpp  AudioFeedback.h  Logger.cpp  Logger.h  SafeMode.cpp  SafeMode.h
